// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Greeting with balances 1`] = `
<DocumentFragment>
  <div
    class="fe-wallet__greeting"
  >
    <div
      class="fe-wallet__greeting__heading"
    >
      <h2
        class="fe-wallet__greeting__heading__main"
      >
        Mi billetera
      </h2>
      <h5
        class="fe-wallet__greeting__heading__sub"
      >
        En tu billetera vas a poder almacenar todas las criptomonedas que compres en ripio.
      </h5>
    </div>
    <div
      class="fe-wallet__greeting__balance-container"
    >
      <div
        class="fe-wallet__balance"
      >
        <span
          class="fe-wallet__balance__symbol"
        >
          $
        </span>
        <span
          class="fe-wallet__balance__amount-desc"
        >
          98000.00
        </span>
        <select
          aria-label="Seleccionar moneda para ver balance"
          class="fe-wallet__dropdown fe-wallet__dropdown__balance"
          id="balance"
          name="balance"
        >
          <option
            value="0"
          >
            ARS
          </option>
          <option
            value="1"
          >
            BTC
          </option>
          <option
            value="2"
          >
            ETH
          </option>
          <option
            value="3"
          >
            USDC
          </option>
          <option
            value="4"
          >
            LTC
          </option>
          <option
            value="5"
          >
            DAI
          </option>
          <option
            value="6"
          >
            AXS
          </option>
          <option
            value="7"
          >
            BAT
          </option>
          <option
            value="8"
          >
            SOL
          </option>
          <option
            value="9"
          >
            LINK
          </option>
          <option
            value="10"
          >
            DOT
          </option>
          <option
            value="11"
          >
            MANA
          </option>
          <option
            value="12"
          >
            RPC
          </option>
          <option
            value="13"
          >
            SLP
          </option>
          <option
            value="14"
          >
            ADA
          </option>
          <option
            value="15"
          >
            UNI
          </option>
          <option
            value="16"
          >
            CHZ
          </option>
          <option
            value="17"
          >
            XRP
          </option>
          <option
            value="18"
          >
            USDT
          </option>
          <option
            value="19"
          >
            DOGE
          </option>
          <option
            value="20"
          >
            AAVE
          </option>
          <option
            value="21"
          >
            UBI
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Greeting without balances 1`] = `
<DocumentFragment>
  <div
    class="fe-wallet__greeting"
  >
    <div
      class="fe-wallet__greeting__heading"
    >
      <h2
        class="fe-wallet__greeting__heading__main"
      >
        Mi billetera
      </h2>
      <h5
        class="fe-wallet__greeting__heading__sub"
      >
        En tu billetera vas a poder almacenar todas las criptomonedas que compres en ripio.
      </h5>
    </div>
    <div
      class="fe-wallet__greeting__balance-container"
    >
      <div
        class="fe-wallet__balance"
      >
        <span
          class="fe-wallet__balance__symbol"
        />
        <span
          class="fe-wallet__balance__amount-desc"
        >
          NaN
        </span>
        <select
          aria-label="Seleccionar moneda para ver balance"
          class="fe-wallet__dropdown fe-wallet__dropdown__balance"
          id="balance"
          name="balance"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
